# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

June 19, 2004
    Chad Lester's excellent work on sndarray
    ffmpeg movie backend renamed to movieext, experimental
    v1.6 movie module restored

May 1, 2004
    updated sprite module, Joe Wresching

March 29, 2004
    checkin movie current rewrite, still rough, libavcodec

February 24, 2004
    no longer parachute SIGPIPE, like SDL 1.2.7

February 15, 2004
    small cleanups to internal Sprite and Group

February 9, 2004
    help protect int overflow

December 25, 2003
    sprite groups are now iterators
    SysFont better unix parsing

November 18, 2003
    Remove legacy python code. Ver 2.2 is minimum

pygame-16
October 23, 2003
    final updates for 1.6

October 15, 2003
    Rects now stored with ints (not shorts)

October 2, 2003
    Add ARGB support to fromstring and tostring

September 29, 2003
    Replaced Objective C with PyObjC code for MacOS X
    Fixed 1 pixel horizontal/vertical line draw

September 27, 2003
	Fix reading from file file-like objects (thx Timothy Stranex)

September 21, 2003
	Fix sysfont registry bug on winNT arch

September 18, 2003
	Fix color problem when saving opengl screenshot

September 10, 2003
	SysFont now accepts None like regular Font

August 10, 2003
	fix JOYHAT_RIGHT input (thanks Latimerius)
	system font names have punctuation removed

July 26, 2003
	add GL_STEREO

July 22, 2003
	add GL_MULTISAMPLEBUFFERS and GL_MULTISAMPLESAMPLES

June 11, 2003
	Surface.set_at() respects clip area
	cleaned fill circle draw

June 8, 2003
	add system font; SysFont,get_system_fonts,match_system_font

June 7, 2003
	Font() no longer segfaults on bad filename [BUG]
	add color module for simple color manipulations

June 6, 2003
	set_palette_at() index 0 fix
	draw.arc() (thanks Lalo Martins)
	Rects are pickleable

May 12, 2003